// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Landing screen when user is of type "pilot" renders traffic light with set color props  1`] = `
<div
  className="src-js-components-screens-Landing-___styles__wrapper___1ia3v"
>
  <header
    className="src-js-components-screens-Landing-___styles__header___2IFnP"
  >
    <h1
      className="src-js-components-screens-Landing-___styles__title___1GTe4"
    >
      Ancestry Coding Challenge
    </h1>
  </header>
  <p
    className="src-js-components-screens-Landing-___styles__intro___2mDAK"
    testid="intro"
  >
    Traffic Light Exercise!
  </p>
  <div
    className="src-js-components-screens-Landing-___styles__traffic-light-row___162r3"
  >
    <div
      className="src-js-components-screens-Landing-___styles__alpha-beta-wrapper___28KUx"
    >
      <TrafficLight
        colors={
          Array [
            "blue",
            "orange",
            "purple",
          ]
        }
      />
    </div>
    <div
      className="src-js-components-screens-Landing-___styles__alpha-beta-wrapper___28KUx src-js-components-screens-Landing-___styles__featured___QsT0-"
    >
      <TrafficLight
        colors={
          Array [
            "blue",
            "orange",
            "purple",
          ]
        }
      />
    </div>
    <div
      className="src-js-components-screens-Landing-___styles__alpha-beta-wrapper___28KUx"
    >
      <TrafficLight
        colors={null}
      />
    </div>
  </div>
</div>
`;

exports[`Landing screen when user is of type "production" renders traffic light without set color props  1`] = `
<div
  className="src-js-components-screens-Landing-___styles__wrapper___1ia3v"
>
  <header
    className="src-js-components-screens-Landing-___styles__header___2IFnP"
  >
    <h1
      className="src-js-components-screens-Landing-___styles__title___1GTe4"
    >
      Ancestry Coding Challenge
    </h1>
  </header>
  <p
    className="src-js-components-screens-Landing-___styles__intro___2mDAK"
    testid="intro"
  >
    Traffic Light Exercise!
  </p>
  <div
    className="src-js-components-screens-Landing-___styles__traffic-light-row___162r3"
  >
    <div
      className="src-js-components-screens-Landing-___styles__alpha-beta-wrapper___28KUx"
    >
      <TrafficLight
        colors={
          Array [
            "blue",
            "orange",
            "purple",
          ]
        }
      />
    </div>
    <div
      className="src-js-components-screens-Landing-___styles__alpha-beta-wrapper___28KUx src-js-components-screens-Landing-___styles__featured___QsT0-"
    >
      <TrafficLight
        colors={null}
      />
    </div>
    <div
      className="src-js-components-screens-Landing-___styles__alpha-beta-wrapper___28KUx"
    >
      <TrafficLight
        colors={null}
      />
    </div>
  </div>
</div>
`;

exports[`Landing screen when user type is not available to the component renders landing text with no traffic light,  1`] = `
<div
  className="src-js-components-screens-Landing-___styles__wrapper___1ia3v"
>
  <header
    className="src-js-components-screens-Landing-___styles__header___2IFnP"
  >
    <h1
      className="src-js-components-screens-Landing-___styles__title___1GTe4"
    >
      Ancestry Coding Challenge
    </h1>
  </header>
  <p
    className="src-js-components-screens-Landing-___styles__intro___2mDAK"
    testid="intro"
  >
    Traffic Light Exercise!
  </p>
</div>
`;
